// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`déroule une partie complète 1`] = `
Object {
  "chiffreCourant": 15,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 20,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 40,
      "touches": Object {},
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 2`] = `
Object {
  "chiffreCourant": 16,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 20,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 70,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 3`] = `
Object {
  "chiffreCourant": 16,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 36,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 70,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 4`] = `
Object {
  "chiffreCourant": "D",
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 36,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 134,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 5`] = `
Object {
  "chiffreCourant": "D",
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J2",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 76,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 134,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
      },
    },
  ],
  "vainqueur": undefined,
}
`;

exports[`déroule une partie complète 6`] = `
Object {
  "chiffreCourant": 17,
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": "J1",
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "joueur": "J1",
      "points": 76,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 0,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 1,
          },
        ],
        "DOUBLE": Array [
          Object {
            "chiffre": 20,
            "nombre": 2,
          },
        ],
      },
    },
    Object {
      "joueur": "J2",
      "points": 67,
      "touches": Object {
        "15": Array [
          Object {
            "chiffre": 15,
            "nombre": 2,
          },
        ],
        "16": Array [
          Object {
            "chiffre": 16,
            "nombre": 4,
          },
        ],
        "DOUBLE": Array [],
      },
    },
  ],
  "vainqueur": undefined,
}
`;
